--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "stripe": "^17.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
