--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,11 @@
 PORT=8000
 MONGO_URI=mongodb+srv://pranaygumashta:CPVFT0in9elHByyh@cluster0.c4upu.mongodb.net/
+FRONTEND_URL=http://localhost:5173
+
+#cloudinary setup
+CLOUD_NAME=dvwsxidfr
+API_KEY=146524157774689
+API_SECRET=NG7e-P0fwlGXqbjoida8_zVH9xQ
+
+#mailtrap
+MAILTRAP_API_TOKEN=c4d9a917158411d69e84b1ed322f13e6
